@@ -29,6 +29,7 @@
 
 require_once(PATH_tslib.'class.tslib_pibase.php');
 require_once(t3lib_extMgm::extPath('ods_osm_search').'class.tx_odsosmsearch_div.php');
+require_once(t3lib_extMgm::extPath('static_info_tables').'pi1/class.tx_staticinfotables_pi1.php');
 
 
 /**
@@ -39,15 +40,23 @@ require_once(t3lib_extMgm::extPath('ods_osm_search').'class.tx_odsosmsearch_div.
  * @subpackage	tx_odsosmsearch
  */
 class tx_odsosmsearch_pi1 extends tslib_pibase {
-	var $prefixId      = 'tx_odsosmsearch_pi1';		// Same as class name
-	var $scriptRelPath = 'pi1/class.tx_odsosmsearch_pi1.php';	// Path to this script relative to the extension dir.
-	var $extKey        = 'ods_osm_search';	// The extension key.
+	public $prefixId      = 'tx_odsosmsearch_pi1';		// Same as class name
+	public $scriptRelPath = 'pi1/class.tx_odsosmsearch_pi1.php';	// Path to this script relative to the extension dir.
+	public $extKey        = 'ods_osm_search';	// The extension key.
+	
+	public $staticInfo;
 
 	function init($conf){
 		$this->conf = $conf;
 		$this->pi_setPiVarDefaults();
 		$this->pi_loadLL();
 		$this->pi_USER_INT_obj = 1;	// Configuring so caching is not expected. This value means that no cHash params are ever set. We do this, because it's a USER_INT object!
+
+		$this->staticInfo = &t3lib_div::getUserObj('&tx_staticinfotables_pi1');
+// 		$this->staticInfo = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('SJBR\\StaticInfoTables\\PiBaseApi');
+		if ($this->staticInfo->needsInit()) {
+			$this->staticInfo->init();
+		}
 	}
 
 	/**
@@ -92,16 +101,26 @@ class tx_odsosmsearch_pi1 extends tslib_pibase {
 		ksort($radius_array);
 		$radius_array = array_keys($radius_array);
 		foreach ($radius_array as $radius) {
-			$radius_select .= "<option value=\"$radius\"".($radius == $radius_value ? ' selected="selected"' : '').">$radius</option>";
+			$radius_select.='<option value="'.$radius.'"'.($radius==$radius_value ? ' selected="selected"' : '').'>'.$radius.'</option>';
 		}
 
 		$limit_value = intval($this->piVars['limit']);
 		$limit_value = $limit_value ? $limit_value : intval($this->conf['limit']);
 
+		$country_options='';
+		if($this->conf['country']){
+			foreach(explode(',',$this->conf['country']) as $country_code){
+ 				$country_options.='<option value="'.$country_code.'"'.($country_code==$this->piVars['country'] ? ' selected="selected"' : '').'>'.$this->staticInfo->getStaticInfoName('COUNTRIES', $country_code).'</option>';
+			}
+		}
+
 		$marker=array(
 			'###FORM_ACTION###'=>$this->pi_getPageLink($this->conf['pid'] ? $this->conf['pid'] : $GLOBALS['TSFE']->id),
 			'###ZIP_NAME###'=>$this->prefixId.'[zip]',
 			'###ZIP_VALUE###'=>$this->piVars['zip'],
+			'###COUNTRY_LABEL###'=>$this->pi_getLL('country'),
+			'###COUNTRY_NAME###'=>$this->prefixId.'[country]',
+			'###COUNTRY_OPTIONS###'=>$country_options,
 			'###RADIUS_NAME###'=>$this->prefixId.'[radius]',
 			'###RADIUS_SELECT###'=>$radius_select,
 			'###LIMIT_NAME###'=>$this->prefixId.'[limit]',
@@ -124,7 +143,8 @@ class tx_odsosmsearch_pi1 extends tslib_pibase {
 			$subpart['###LIST_ITEM###']='';
 			if(is_array($addresses)){
 				foreach($addresses as $address){
-					$address['distance']=round($address['distance'],$this->conf['distance.']['round']);
+					$distance=round($address['distance'],$this->conf['distance.']['round']);
+					$address['distance']=number_format($distance, intval($this->staticInfo->currencyInfo['cu_decimal_digits']), $this->staticInfo->currencyInfo['cu_decimal_point'], (($this->staticInfo->currencyInfo['cu_thousands_point'])?$this->staticInfo->currencyInfo['cu_thousands_point']:chr(32)));
 					$conf=$this->conf['list.']['tt_address.'];
 					$local_cObj->data=$address;
 					$marker=array(
