@@ -6,6 +6,10 @@
 		<label for="###ZIP_NAME###">###LABEL_ZIP###</label>
 		<input id="###ZIP_NAME###" name="###ZIP_NAME###" size="5" type="text" value="###ZIP_VALUE###" />
 	</div>
+<!--	<div class="osm_search_country">
+		<label for="###COUNTRY_NAME###">###COUNTRY_LABEL###</label>
+		<select id="###COUNTRY_NAME###" name="###COUNTRY_NAME###">###COUNTRY_OPTIONS###</select>
+	</div>-->
 	<div class="osm_search_radius">
 		<label for="###RADIUS_NAME###">###LABEL_RADIUS###</label>
 		<select id="###RADIUS_NAME###" name="###RADIUS_NAME###">###RADIUS_SELECT###</select>
