@@ -1,3 +1,7 @@
+2014-04-13 Robert Heel <typo3@bobosch.de>
+	* Change: TS option "country" to add a country selection dropdown (also uncomment select field in template).
+	* Change: Use static_info_tables for distance number format.
+
 2013-06-09 Robert Heel <typo3@bobosch.de>
 	* Bugfix: Don't cache page when searching.
 
